add new tools page

--- a/index.html
+++ b/index.html
@@ -77,22 +77,22 @@
       </a>
 
       <!-- Compress PDF Card -->
-      <div
+      <a href="./compresspdf.html"
         class="bg-white p-6 rounded-lg shadow-md text-center transform transition hover:-translate-y-1 hover:shadow-lg">
         <img src="https://cdn-icons-png.flaticon.com/512/3767/3767034.png" alt="Compress PDF"
           class="w-16 h-16 mx-auto mb-4">
         <h3 class="text-xl font-semibold text-purple-600">Compress PDF</h3>
         <p class="text-gray-600">Reduce file size while optimizing for maximal PDF quality.</p>
-      </div>
+      </a>
 
       <!-- PDF to Word Card -->
-      <div
+      <a href="./pdftoword.html"
         class="bg-white p-6 rounded-lg shadow-md text-center transform transition hover:-translate-y-1 hover:shadow-lg">
         <img src="https://cdn-icons-png.flaticon.com/512/3767/3767092.png" alt="PDF to Word"
           class="w-16 h-16 mx-auto mb-4">
         <h3 class="text-xl font-semibold text-red-600">PDF to Word</h3>
         <p class="text-gray-600">Easily convert your PDF files into easy-to-edit DOC and DOCX documents.</p>
-      </div>
+      </a>
 
       <!-- PDF to PowerPoint Card -->
       <div
@@ -104,13 +104,13 @@
       </div>
 
       <!-- Rotate PDF Card -->
-      <div
+      <a href="./rotatepdf.html"
         class="bg-white p-6 rounded-lg shadow-md text-center transform transition hover:-translate-y-1 hover:shadow-lg">
         <img src="https://cdn-icons-png.flaticon.com/512/3767/3767086.png" alt="Rotate PDF"
           class="w-16 h-16 mx-auto mb-4">
         <h3 class="text-xl font-semibold text-pink-600">Rotate PDF</h3>
         <p class="text-gray-600">Rotate PDF pages to the correct orientation in just a few clicks.</p>
-      </div>
+      </a>
     </div>
   </section>
 
